最終課題用の訂正ファイルをアップロードしました。

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div>
         <p>このページでは、HP主がコンパクトデジタルカメラなどで上手く撮れた写真、一眼レフを購入してから撮影した写真を紹介。学生ハーフ以降は一眼レフでの撮影。書いてある所属・学年は大会当時のもの。</p>
         <p>主に紹介される項目は以下の通り。項目をクリックするとその項目のトップ写真まで飛ぶことができます。</p>
-        <h4 class="chui">写真の著作権は撮影者にあります。映っている本人様とその関係者以外の無断利用・無断転載を禁じます。保存・利用申請は以下のフォームから。</h4>
+        <h4 class="chui">写真の著作権は撮影者にあります。また、本サイトで公開している写真は、撮影が許可されている大会または撮影許可を得た大会にて撮影したものです。肖像権に関しては、スポーツ大会における肖像権の考え方を参照ください。映っている本人様とその関係者以外の無断利用・無断転載を禁じます。関係者以外の方の保存・利用申請は以下のフォームから。</h4>
         <a href="#shinseiform" class="shinsei">写真保存・利用申請フォーム</a>
 
         <ul>
